--- a/Complete Intro to Web Development/html/index.html
+++ b/Complete Intro to Web Development/html/index.html
@@ -176,7 +176,7 @@
     </section>
     <section class="outro">
       Outro
-      <blockquote>If you aren't falling you aren't innovating!</blockquote>
+      <blockquote>If you aren't failing you aren't innovating!</blockquote>
     </section>
   </body>
 </html>
