Added id attribute in topics

--- a/Complete Intro to Web Development/css/Project-1/index.html
+++ b/Complete Intro to Web Development/css/Project-1/index.html
@@ -109,11 +109,11 @@
         </p>
       </article>
       <div class="topics">
-        <h2 class="topic-type politics">Politics</h2>
-        <h2 class="topic-type technology">Technology</h2>
-        <h2 class="topic-type locals">Local</h2>
-        <h2 class="topic-type opinion">Opinion</h2>
-        <h2 class="topic-type sports">Sports</h2>
+        <h2 class="topic-type politics" id="politics">Politics</h2>
+        <h2 class="topic-type technology" id="technology">Technology</h2>
+        <h2 class="topic-type locals" id="locals">Local</h2>
+        <h2 class="topic-type opinion" id="opinion">Opinion</h2>
+        <h2 class="topic-type sports" id="sports">Sports</h2>
       </div>
     </section>
   </body>
