--- a/Complete Intro to Web Development/css/Project-2/index.html
+++ b/Complete Intro to Web Development/css/Project-2/index.html
@@ -2,36 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coffee Master</title>
+    <title>Coffee Masters</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="main-nav">
-      <h1 class="brand-name">
+      <h1 class="brand">
         <img
-          src="assests/coffee.png"
-          alt="coffee master logo"
+          src="https://btholt.github.io/complete-intro-to-web-dev-v3/images/coffee_masters_logo.png"
+          alt="coffee masters logo"
           class="logo"
-          height="25"
-          width="25"
         />
-        Coffee Master
+        Coffee Masters
       </h1>
     </nav>
     <div class="page">
-      <section class="order">
-        <h2 class="box-title">Items</h2>
+      <section class="order box">
+        <h2 class="box-title">ITEMS</h2>
         <ul class="items">
           <li class="item">
             <div class="item-quantity">1x</div>
             <div class="item-title">Cappucino</div>
-            <div class="item-price">$5</div>
+            <div class="item-price">$6.00</div>
             <ul class="item-options-list">
               <li class="item-option">Light Foam</li>
             </ul>
@@ -39,7 +38,7 @@
           <li class="item">
             <div class="item-quantity">1x</div>
             <div class="item-title">Cappucino</div>
-            <div class="item-price">$7</div>
+            <div class="item-price">$7.90</div>
             <ul class="item-options-list">
               <li class="item-option">Almond Milk</li>
               <li class="item-option">Double Espresso Shot</li>
@@ -48,44 +47,35 @@
           <li class="item">
             <div class="item-quantity">1x</div>
             <div class="item-title">Croissant</div>
-            <div class="item-price">$6</div>
+            <div class="item-price">$5.37</div>
             <ul class="item-options-list">
               <li class="item-option">Butter</li>
             </ul>
           </li>
         </ul>
       </section>
-      <section class="payment-info">
+      <section class="payment">
         <div class="name-box box">
-          <h2 class="box-title">Name</h2>
+          <h2 class="box-title">NAME</h2>
           <div class="input-group">
-            <fieldset class="user-input">
-              <legend class="user-input title">Name for order</legend>
-              <label for="name" class="user-input label"></label>
-              <input type="text" class="user-input input" id="name" />
-            </fieldset>
+            <label class="user-input-label" for="name">Name for order</label>
+            <input type="text" class="user-input" id="name" />
           </div>
         </div>
         <div class="cc-box box">
-          <h2 class="box-title">Payment</h2>
+          <h2 class="box-title">PAYMENT</h2>
           <div class="input-group">
-            <fieldset class="user-input">
-              <legend class="user-input title">Card Number</legend>
-              <label for="cc" class="user-input label"></label>
-              <input type="number" class="user-input input" id="cc" />
-            </fieldset>
+            <label class="user-input-label" for="cc">Card number</label>
+            <input type="text" class="user-input" id="cc" />
           </div>
           <div class="input-group">
-            <fieldset class="user-input">
-              <legend class="user-input title">CVV Number</legend>
-              <label for="cvv" class="user-input label"></label>
-              <input type="number" class="user-input input" id="cvv" />
-            </fieldset>
+            <label class="user-input-label" for="ccv">CCV number</label>
+            <input type="text" class="user-input short-input" id="ccv" />
           </div>
         </div>
       </section>
       <section class="total">
-        <table class="summary-table">
+        <table class="totals-table">
           <tbody>
             <tr>
               <td>Subtotal:</td>
@@ -93,15 +83,15 @@
             </tr>
             <tr>
               <td>Tax:</td>
-              <td>$0.98</td>
+              <td>$0.96</td>
             </tr>
-            <tr class="final total">
+            <tr class="final-totals">
               <td>Total:</td>
-              <td>$20.25</td>
+              <td>$20.23</td>
             </tr>
           </tbody>
         </table>
-        <button class="checkout" type="button">Place Order</button>
+        <button class="checkout" type="button">Place order</button>
       </section>
     </div>
   </body>
