Added event listener on button click

--- a/Complete Intro to Web Development/css/Project-2/index.html
+++ b/Complete Intro to Web Development/css/Project-2/index.html
@@ -94,5 +94,6 @@
         <button class="checkout" type="button">Place order</button>
       </section>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
