Addent eventListener to show alert message on placing order

--- a/Complete Intro to Web Development/css/Project-2/index.html
+++ b/Complete Intro to Web Development/css/Project-2/index.html
@@ -59,18 +59,33 @@
           <h2 class="box-title">NAME</h2>
           <div class="input-group">
             <label class="user-input-label" for="name">Name for order</label>
-            <input type="text" class="user-input" id="name" />
+            <input
+              type="text"
+              class="user-input"
+              id="name"
+              placeholder="Enter your name"
+            />
           </div>
         </div>
         <div class="cc-box box">
           <h2 class="box-title">PAYMENT</h2>
           <div class="input-group">
             <label class="user-input-label" for="cc">Card number</label>
-            <input type="text" class="user-input" id="cc" />
+            <input
+              type="text"
+              class="user-input"
+              id="cc"
+              placeholder="Enter card number"
+            />
           </div>
           <div class="input-group">
             <label class="user-input-label" for="ccv">CCV number</label>
-            <input type="text" class="user-input short-input" id="ccv" />
+            <input
+              type="text"
+              class="user-input short-input"
+              id="ccv"
+              placeholder="Enter CVV number"
+            />
           </div>
         </div>
       </section>
