Fixed typo and modified box-shadow

--- a/Complete Intro to Web Development/css/Project-2/index.html
+++ b/Complete Intro to Web Development/css/Project-2/index.html
@@ -79,11 +79,11 @@
             />
           </div>
           <div class="input-group">
-            <label class="user-input-label" for="ccv">CCV number</label>
+            <label class="user-input-label" for="cvv">CVV number</label>
             <input
               type="text"
               class="user-input short-input"
-              id="ccv"
+              id="cvv"
               placeholder="Enter CVV number"
             />
           </div>
