--- a/Complete Intro to Web Development/javascript/index.html
+++ b/Complete Intro to Web Development/javascript/index.html
@@ -19,25 +19,25 @@
             <button class="calc-button operator">÷</button>
           </div>
           <div class="calc-button-row">
-            <button class="calc-button">7</button>
-            <button class="calc-button">8</button>
-            <button class="calc-button">9</button>
+            <button class="calc-button" id = "seven">7</button>
+            <button class="calc-button" id = "eight">8</button>
+            <button class="calc-button" id = "nine">9</button>
             <button class="calc-button operator">×</button>
           </div>
           <div class="calc-button-row">
-            <button class="calc-button">4</button>
-            <button class="calc-button">5</button>
-            <button class="calc-button">6</button>
+            <button class="calc-button" id = "four">4</button>
+            <button class="calc-button" id = "five">5</button>
+            <button class="calc-button" id = "six">6</button>
             <button class="calc-button operator">-</button>
           </div>
           <div class="calc-button-row">
-            <button class="calc-button">1</button>
-            <button class="calc-button">2</button>
-            <button class="calc-button">3</button>
+            <button class="calc-button" id = "one">1</button>
+            <button class="calc-button id = "two">2</button>
+            <button class="calc-button id = "three">3</button>
             <button class="calc-button operator">+</button>
           </div>
           <div class="calc-button-row">
-            <button class="calc-button triple">0</button>
+            <button class="calc-button triple" id = "zero">0</button>
             <button class="calc-button operator">=</button>
           </div>
         </section>
