Added styles, animation and event-listener

--- a/Complete Intro to Web Development/final-project/index.html
+++ b/Complete Intro to Web Development/final-project/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div class="navbar">
-      <div class="brand">
+      <div class="winner brand">
         <h1>Word Masters</h1>
       </div>
       <hr />
-      <div class="spiral">
-        <div class="spiral hidden">🌀</div>
+      <div class="spinning hidden">
+        <div class="spiral"><strong> 🤗</strong></div>
       </div>
       <div class="scoreboard">
         <div class="scoreboard-letter" id="letter-0"></div>
