Adding functionality for checking correct and incorrect words

--- a/Complete Intro to Web Development/final-project/index.html
+++ b/Complete Intro to Web Development/final-project/index.html
@@ -14,8 +14,8 @@
         <h1>Word Masters</h1>
       </div>
       <hr />
-      <div class="spinning hidden">
-        <div class="spiral"><strong> 🤗</strong></div>
+      <div class="spinning">
+        <div class="spiral">🤗</div>
       </div>
       <div class="scoreboard">
         <div class="scoreboard-letter" id="letter-0"></div>
